# cpn-core

./: .cz.yaml  .dockerignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/workflows/: pre-commit.yml  pyright.yml  release-publish.yml
src/cpn_core/_utils/: _gen_map_search_url.py  _request_session_helper.py
src/cpn_core/exceptions/: get_data.py
src/cpn_core/get_data/: base.py  check_phat_nguoi.py  csgt.py  etraffic.py  phat_nguoi.py  tra_cuu_phat_nguoi.py  zm_io.py
src/cpn_core/get_data/engines/: check_phat_nguoi.py  csgt.py  etraffic.py  phat_nguoi.py  zm_io.py
src/cpn_core/models/: plate_detail.py  plate_info.py  violation_detail.py
src/cpn_core/models/notifications/: base.py  discord.py  telegram.py
src/cpn_core/notifications/: base.py  discord.py  telegram.py
src/cpn_core/notifications/engines/: discord.py  telegram.py
src/cpn_core/types/: api.py  vehicle_type.py
src/cpn_core/utils/: gen_map_search_url.py  request_session_helper.py
